--- a/.env
+++ b/.env
@@ -8,4 +8,13 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 GOOGLE_REDIRECT_URI=http://localhost:8060/auth/google/callback
 
 
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/fastapi
+DATABASE_URL=postgresql://monuser:StrongPassword123!@localhost:5432/fastapi_db
+# SMTP / Gmail
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USERNAME=djangodev37@gmail.com
+SMTP_PASSWORD=yjsf kndy nlbb cwrk   # App Password (16 chars)
+SMTP_FROM=your_email@gmail.com
+
+# Frontend
+FRONTEND_URL=http://localhost:3000
