--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 GOOGLE_REDIRECT_URI=http://localhost:8060/auth/google/callback
 
 
-DATABASE_URL=postgresql://monuser:StrongPassword123!@localhost:5432/fastapi_db
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/fastapi
 # SMTP / Gmail
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
